# transcription-history-manager

./: .env.example  Dockerfile  LICENSE  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: conversations.py  health.py
app/core/: config.py
app/db/: __init__.py  database.py
app/models/: transcription.py
app/repositories/: __init__.py  base.py  superwhisper.py  superwhisper_cache.py  transcription_index.py
app/schemas/: transcription.py
app/services/: __init__.py  indexing_service.py  transcription_service.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_main.py  test_transcription_service.py
